# openpowerlifting-to-sqlite

./: .gitignore  LICENSE  README.md  pyproject.toml
src/process/: __init__.py  app.py  csv_dtype.json  orm.py
