[tool.poetry]
name = "process"
version = "0.1.0"
description = ""
authors = ["Jon Mills <40585882+TheFlyingBadger@users.noreply.github.com>"]
readme = "README.md"
homepage = "https://github.com/itsalljustdata/openpowerlifting-to-sqlite"
repository = "https://github.com/itsalljustdata/openpowerlifting-to-sqlite"
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.1"
beautifulsoup4 = "^4.11.1"
sqlalchemy = "^1.4.42"
pandas = "^1.5.0"
dask = "^2022.10.0"
sqlalchemy-utils = "^0.38.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
